src/ui/readarr_ui/snapshots/managarr__ui__readarr_ui__readarr_ui_tests__tests__snapshot_tests__readarr_ui_renders_context_row_loading.snap
---
source: src/ui/readarr_ui/readarr_ui_tests.rs
expression: output
---
╭  Stats  ──────────────────────────────────────────────────────────────╮╭  Downloads  ─────────────────────────────────────────────────────────╮╭──────────────────╮
│                                                                       ││                                                                      ││  ⠀⠀⠀⠀⠀⣀⣠⣤⣄⣀⠀⠀⠀⠀⠀ │
│                                                                       ││                                                                      ││  ⠀⠀⢀⡴⠛⠉⠀⠀⠀⠉⠛⢦⡀⠀⠀ │
│ Loading ...                                                           ││ Loading ...                                                          ││  ⠀⢠⣯⣄⣀⣐⠻⣿⠟⣂⣀⣠⣽⡄⠀ │
│                                                                       ││                                                                      ││  ⠀⣾⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣷⠀ │
│                                                                       ││                                                                      ││  ⠀⢿⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡿⠀ │
│                                                                       ││                                                                      ││  ⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀ │
│                                                                       ││                                                                      ││  ⠀⠀⠈⠳⣬⣙⠻⠿⠟⣋⣥⠞⠁⠀⠀ │
│                                                                       ││                                                                      ││  ⠀⠀⠀⠀⠀⠉⠙⠛⠋⠉⠀⠀⠀⠀⠀ │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
│                                                                       ││                                                                      ││                  │
╰───────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯╰──────────────────╯
